--- a/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/read-object-table.html
@@ -3,28 +3,25 @@
     <table class="table table-bordered metadata-table" 
         data-module="table-collapsible-rows"
         data-module-numcols="{{ num_cols|int }}"
+        data-module-state="more"
       >
+        <colgroup>
         {% if num_cols > 3 %}
         {% with wl = 1.8, col_width = 100.0 / (num_cols + (wl - 1)) %}
-        <colgroup>
             {%- for j in range(1, num_cols) -%}
-            <col style="width:{{ '%.1f'|format(col_width) }}%" />
+            <col style="width:{{ '%.1f'|format(col_width) }}%"/>
             {%- endfor -%}
-            <col style="width:{{ '%.1f'|format(col_width * wl) }}%" />
-        </colgroup>
+            <col style="width:{{ '%.1f'|format(col_width * wl) }}%"/>
         {% endwith %}
         {% elif num_cols == 3 %}
-        <colgroup>
-            <col style="width: 30%" />
-            <col style="width: 24%" />
-            <col style="width: 46%" />
-        </colgroup>
+            <col style="width: 30%"/>
+            <col style="width: 24%"/>
+            <col style="width: 46%"/>
         {% elif num_cols == 2 %}
-        <colgroup>
-            <col style="width: 40%" />
-            <col style="width: 60%" />
-        </colgroup>
+            <col style="width: 40%"/>
+            <col style="width: 60%"/>
         {% endif %} {# num_cols #}
+        </colgroup>
         
         <tbody>
             {% for row in rows -%}
