Added conformity, access-constraints at INSPIRE metadata forms

--- a/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
+++ b/ckanext/publicamundi/templates/package/snippets/objects/glue-edit-inspire-datasetform.html
@@ -153,12 +153,23 @@
         { 
             'name': 'conformity',
             'heading': _('Conformity'),
-            'subgroups': []
+            'subgroups': [
+                {
+                    'fields': ['conformity'],
+                },
+             ]
         },
         { 
             'name': 'constraints',
             'heading': _('Constraints'),
-            'subgroups': []
+            'subgroups': [
+                {
+                    'fields': ['access_constraints'],
+                },
+                {
+                    'fields': ['limitations'],
+                },
+            ]
         },
         { 
             'name': 'responsible-party',
