--- a/ckanext/publicamundi/templates/package/search.html
+++ b/ckanext/publicamundi/templates/package/search.html
@@ -37,7 +37,8 @@
 
 {% block secondary_content %}
   {# Map widget #}
-  {% snippet "spatial/snippets/spatial_query.html" %}
+  {% snippet "spatial/snippets/spatial_query.html", default_extent="{ \"type\":\"Polygon\", \"coordinates\": [[[20.150247097,35.1192143555],[20.150247097,41.8958331781],[28.5535736084,41.8958331781],[28.5535736084,35.1192143555],[20.150247097,35.1192143555]]] }" %}
+  
   {# Facets #}
   {% with labels = c.facet_labels or {} %}
   {% for facet, title in c.facet_titles.items() %}
