--- a/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_basic_fields.html
@@ -94,16 +94,14 @@
   <div class="controls">
     <select id="field-license" name="license_id" data-module="autocomplete" class="input-xlarge">
       {% for license_desc, license_id in licenses|sort if license_desc  %}
-        <option value="{{ license_id }}" {% if data.get('license_id', 'notspecified') == license_id %}selected="selected"{% endif %}>{{ license_desc }}</option>
+      <option value="{{ license_id }}" 
+        {%- if data.get('license_id', 'notspecified') == license_id %}selected="selected"{% endif %}>{{ license_desc }}</option>
       {% endfor %}
     </select>
     {% if error %}<span class="error-block">{{ error }}</span>{% endif %}
-    
-    <span class="info-block info-inline">
-      {#<i class="icon-info-sign"></i>#}
-      {% trans %}License definitions at <a href="http://opendefinition.org/licenses/">opendefinition.org</a>{% endtrans %}
-    </span>
-    
+    <div class="help-block">
+      {% trans %}Check license definitions at <a href="http://opendefinition.org/licenses/">opendefinition.org</a>{% endtrans %}
+    </div>
   </div>
 </div>
 
