--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_fields.html
@@ -3,6 +3,11 @@
 {% block package_metadata_fields %}
 
 {% block package_metadata_fields_url %}
+{# Note: 
+   The following is not really needed since we give the user the option to import
+   an allready existing metadata file (in a dedicated form)
+#}
+{#
 {{ 
     form.input(
         'url', 
@@ -13,6 +18,7 @@
         error=errors.url, 
         classes=['control-medium']) 
 }}
+#}
 {% endblock %} {# package_metadata_fields_url #}
 
 {% block package_metadata_fields_version %}
