--- a/ckanext/publicamundi/public/css/main.css
+++ b/ckanext/publicamundi/public/css/main.css
@@ -42,6 +42,14 @@ header > h6.inline {
     padding: 3px 6px;
 }
 
+.btn.dropdown-toggle > .caret {
+    margin-left: 2px;
+}
+
+.dropdown-menu li > a > p {
+    margin: 2px 0px;
+}
+
 .datepicker {
     width: 250px
 }
@@ -325,7 +333,7 @@ h1 > .label.package-state {
 .resources li.resource-item .btn-group {
     position: relative;
     top: 0px;
-    right: 0px;
+    right: 5px;
 }
 
 .resources li.resource-item .btn-group + .btn-group {
