--- a/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
+++ b/ckanext/publicamundi/templates/package/snippets/package_metadata_table.html
@@ -18,7 +18,7 @@
         </ul>
       </div>
       <div class="metadata-label pull-right">
-        <big>{{ dtspec.title|title|upper }}</big> <i class="icon-ok-sign"></i>
+        <span>{{ dtspec.title|title|upper }}</span> <i class="icon-ok-sign"></i>
       </div>
     </div>
   </header>
