--- a/ckanext/publicamundi/themes/geodata/templates/snippets/group.html
+++ b/ckanext/publicamundi/themes/geodata/templates/snippets/group.html
@@ -11,7 +11,8 @@ Example:
 
     #}
   <section class="module module-narrow module-shallow group">
-    <h2 class="module-heading"><i class="icon-medium icon-lock"></i> {{ _('Topics') }}</h2>
+  <h2 class="module-heading"> {{ _('Topics') }}</h2>
+  {# <i class="icon-medium icon-lock"></i> #}
     {% if not group %}
     <section class="module-content"></section>
     {% endif %}
