resource buttons changes

--- a/ckanext/publicamundi/storers/vector/templates/package/resource_read.html
+++ b/ckanext/publicamundi/storers/vector/templates/package/resource_read.html
@@ -16,18 +16,19 @@
     
     #}
 
-    {% if res.vectorstorer_resource and res.format == 'data_table' %}
+    {# {% if res.vectorstorer_resource and res.format == 'data_table' %} #}
+   {% if h.check_access('package_update', {'id':pkg.id }) and res.format == 'data_table' %}
 	{% set export_dialog_url = h.url_for('vector_export',  action='export',operation='index', id=pkg.name, resource_id=res.id) %} 
-	<a class="btn btn-success" href="{{ export_dialog_url }}" 
+    <li><a class="btn" href="{{ export_dialog_url }}" 
         data-module="api-info" data-module-template="{{ export_dialog_url }}" data-loading-text="{{ loading_text }}"
-        ><i class="icon-cloud-download"></i> {{ _('Export') }}</a>
+        ><i class="icon-cloud-download"></i> {{ _('Export') }}</a></li>
 	{% resource 'ckanext-publicamundi-vector/dialog' %}
     {% endif %}
 
-    {% if res.vectorstorer_resource  and res.format == 'wms' %}
-	{% set edit_style_url = h.url_for('edit_current_sld', action='edit_current_sld', id=pkg.name, resource_id=res.id,operation='show') %} 
-	<a class="btn btn-success" href="{{ edit_style_url }}"
-        ><i class="icon-magic"></i> {{ _('Edit Style') }}</a> 
+    {% if h.check_access('package_update', {'id':pkg.id }) and res.vectorstorer_resource and res.format == 'wms'%}
+        {% set edit_style_url = h.url_for('edit_current_sld', action='edit_current_sld', id=pkg.name, resource_id=res.id,operation='show') %} 
+        <li><a class="btn" href="{{ edit_style_url }}"
+            ><i class="icon-magic"></i> {{ _('Edit Style') }}</a></li>
     {% endif %}
 
 {% endblock %}
