--- a/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/vector.html
+++ b/ckanext/publicamundi/storers/vector/templates/user/snippets/ingest_templates/vector/vector.html
@@ -24,7 +24,7 @@
     
     {% endif %}
     </br>
-    <button class="btn btn-success" id="ingest_button"> {{ _('Ingest') }}</button>
+    <button class="btn" id="ingest_button"> {{ _('Ingest') }}</button>
 </div>
   
 {% resource 'ckanext-publicamundi-vector/vector_ingest'%}
