--- a/ckanext/publicamundi/templates/package/resource_read.html
+++ b/ckanext/publicamundi/templates/package/resource_read.html
@@ -28,9 +28,9 @@
         </li>
         {% endif %}
     {% endif %}
-    {% if 'datastore' in g.plugins %}
+    {% if 'datastore' in g.plugins and res.datastore_active %}
         <li>{% snippet 'package/snippets/data_api_button.html', resource=res, datastore_root_url=c.datastore_api %}</li>
-        {% endif %}
+    {% endif %}
             
 {% endblock %}
 
