--- a/ckanext/publicamundi/themes/geodata/templates/package/search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/search.html
@@ -16,10 +16,10 @@
               <a href="#">{{_('Mapping API')}}</a>
               </li>
               <li>
-              <a href="#">{{_('Data API')}}</a>
+              <a href="/maps/demo/data-api.html">{{_('Data API')}}</a>
               </li>
               <li>
-              <a href="#">{{_('INSPIRE')}}</a>
+              <a href="/csw?service=CSW&version=2.0.2&request=GetCapabilities">{{_('CSW API')}}</a>
               </li>
               {% block header_site_navigation_tabs %}
             
