changed endpoint icon

--- a/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/snippets/resource_item.html
@@ -20,7 +20,7 @@
         <a href="{{ res.url }}" class="resource-url-analytics" target="_blank">
             {# {% if res.can_be_previewed %} #}
             {% if res.resource_type == 'api' %}
-            <div class="btn"> <i class="icon-key"></i>
+            <div class="btn"> <i class="icon-beaker"></i>
               {{ _('Endpoint') }}</div>
             {% else %} 
           <div class="btn"> <i class="icon-download"></i>
