--- a/ckanext/publicamundi/themes/geodata/templates/package/search.html
+++ b/ckanext/publicamundi/themes/geodata/templates/package/search.html
@@ -13,7 +13,7 @@
             <nav class="section alt-navigation">
           <ul class="alt-nav nav nav-pills">
               <li>
-              <a href="#">{{_('Mapping API')}}</a>
+              <a href="/mapping-api/">{{_('Mapping API')}}</a>
               </li>
               <li>
               <a href="/maps/demo/data-api.html">{{_('Data API')}}</a>
