--- a/ckanext/publicamundi/templates/user/snippets/resource_ingest_status_label.html
+++ b/ckanext/publicamundi/templates/user/snippets/resource_ingest_status_label.html
@@ -1,1 +1,1 @@
-<span class="label" {% if status %}data-resource-status="{{ status }}"{% endif %}>{{ status_text or status or _('n/a') }}</span>
+<span class="label" {% if status %}data-resource-status="{{ status }}"{% else %}data-resource-status="no-action"{% endif %}>{{ status_text or status or _('n/a') }}</span>
