--- a/ckanext/publicamundi/themes/geodata/templates/home/layout1.html
+++ b/ckanext/publicamundi/themes/geodata/templates/home/layout1.html
@@ -1,5 +1,5 @@
 {% set sorting = [(_('Latest Updated'), 'name desc')] %}
-<div role="main" class="hero"  style = "background: url({{ h.url_for_static('/images/geodata-greecepx.jpg')}}); background-size:cover; background-repeat: no-repeat; background-position:center" />
+<div role="main" class="hero"  style = "background: url({{ h.url_for_static('/images/screen4.png')}}); background-size:cover; background-repeat: no-repeat; background-position:center" />
 
   <div class="container">
           <div class = "promotebox">
