--- a/ckanext/publicamundi/themes/geodata/templates/footer.html
+++ b/ckanext/publicamundi/themes/geodata/templates/footer.html
@@ -37,6 +37,7 @@
                 ('group_index', _('Topics')),
                 ('organizations_index', _('Organizations')),
                 ('maps', _('Maps')),
+                ('news', _('News')),
                 ('about', _('About'))
                 ) }}
             {% endblock %}
